--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Odin Library</title>
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add" />
 	<script src="script.js" defer></script>
 </head>
 <body>
