feat: add header structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
-	<h1>Hello world</h1>
+	<header class="header">
+		<h1 class="header__title">Odin Books</h1>
+		<button class="button button__primary">
+			<span class="material-symbols-outlined">add</span>
+			New Book
+		</button>
+	</header>
 </body>
 </html>
