fix: remove unecessary attributes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 			New Book
 		</button>
 	</header>
-	<dialog class="modal js-modal" formm>
+	<main class="book js-books">
+	</main>
+	<dialog class="modal js-modal">
 		<form class="form js-form" action="#" method="dialog">
 			<h2 class="form__heading">Add New Book</h2>
 			<label class="form__label" for="title">Title</label>
